--- a/themes/hugo-lithium-theme/layouts/partials/footer.html
+++ b/themes/hugo-lithium-theme/layouts/partials/footer.html
@@ -13,4 +13,8 @@
 
     {{ template "_internal/google_analytics.html" . }}
   </body>
+
+<script type="text/javascript"
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 </html>
