--- a/themes/hugo-lithium-theme/layouts/partials/head.html
+++ b/themes/hugo-lithium-theme/layouts/partials/head.html
@@ -30,6 +30,5 @@
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400|Lato:400,400italic,700">
 
-<link rel="shortcut icon" href="/favicon.ico"/>
+<link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
 
-<link rel="bookmark" href="/favicon.ico"/>
