add LaTeX support,decorate the theme and add old post form old blog

--- a/themes/hugo-lithium-theme/layouts/partials/head.html
+++ b/themes/hugo-lithium-theme/layouts/partials/head.html
@@ -29,6 +29,10 @@
 
 <link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css" media="all">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Merriweather:400|Lato:400,400italic,700">
-
 <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+
+<!-- Highlight.js and css -->
+    <script src="{{ .Site.BaseURL }}js/highlight.js/9.7.0/highlight.min.js"></script>
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/highlight.js/9.7.0/styles/github.min.css">
+    <script>hljs.initHighlightingOnLoad();</script>
 
