--- a/themes/hugo-lithium-theme/layouts/_default/single.html
+++ b/themes/hugo-lithium-theme/layouts/_default/single.html
@@ -1,3 +1,5 @@
+
+
 {{ partial "header.html" . }}
 
 <main class="content" role="main">
@@ -21,5 +23,5 @@
   {{ template "_internal/disqus.html" . }}
 
 </main>
-
+{{ partial "mathjax.html" . }}
 {{ partial "footer.html" . }}
