--- a/themes/hugo-lithium-theme/layouts/partials/mathjax.html
+++ b/themes/hugo-lithium-theme/layouts/partials/mathjax.html
@@ -1,6 +1,6 @@
 {{ if .Params.mathjax }}
     <script type="text/javascript"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
