--- a/themes/hugo-lithium-theme/layouts/partials/mathjax.html
+++ b/themes/hugo-lithium-theme/layouts/partials/mathjax.html
@@ -9,7 +9,7 @@ MathJax.Hub.Config({
     displayMath: [['$$','$$']],
     processEscapes: true,
     processEnvironments: true,
-    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre','code'],
+    skipTags: ['script', 'noscript', 'style', 'textarea'],
     TeX: { equationNumbers: { autoNumber: "AMS" },
          extensions: ["AMSmath.js", "AMSsymbols.js"] }
   }
