--- a/themes/hugo-lithium-theme/layouts/index.html
+++ b/themes/hugo-lithium-theme/layouts/index.html
@@ -3,8 +3,8 @@
 <main class="content" role="main">
 
   <div class="archive">
-    {{ range .Data.Pages.GroupByDate "2006"  }}
-    <h2 class="archive-title">{{ .Key }}</h2>
+    <!-- {{ range .Data.Pages.GroupByDate "2006"  }} -->
+    <!-- <h2 class="archive-title">{{ .Key }}</h2> -->
     {{ range where .Pages "Section" "post" }}
     <article class="archive-item">
       <a href="{{ .Permalink }}" class="archive-item-link">{{ .Title }}</a>
@@ -13,7 +13,7 @@
       </span>
     </article>
     {{ end }}
-    {{ end }}
+    <!-- {{ end }} -->
   </div>
 
 </main>
