--- a/themes/hugo-lithium-theme/layouts/partials/nav.html
+++ b/themes/hugo-lithium-theme/layouts/partials/nav.html
@@ -1,10 +1,9 @@
 <nav class="nav">
   <a href="{{ .Site.BaseURL }}" class="nav-logo"><img src="{{ .Site.BaseURL }}images/{{ .Site.Params.logo.url }}" width="{{ .Site.Params.logo.width }}" height="{{ .Site.Params.logo.height }}"></a>
 
-  <div>
-    <big class="nav-title">{{ .Site.Params.title}}</big>
-      <br/>
-    <small class="nav-subtitle">{{ .Site.Params.subtitle}}</small>
+  <div class="nav-title-container">
+    <span class="nav-title">{{ .Site.Params.title}}</span>
+    <span class="nav-subtitle">{{ .Site.Params.subtitle}}</span>
  </div>
 
 
